[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rottl"
version = "0.0.3"
description = "A high-performance Python library providing bucket-based rotating data structures with approximate TTL eviction and strict memory constraints."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rbloom==1.5.4",
]
keywords = [
    "ttl",
    "cache",
    "bloom",
    "bloom-filter",
    "rotating",
    "data-structures",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sharvul/rottl"
Issues = "https://github.com/sharvul/rottl/issues"
